# NE

./: .gitignore  MakeRelease  Makefile.in  NOTICE  README  README.md  configure  configure.ac
doc/: ChangeLog  Makefile  ne.1  ne.xfpt
src/: Makefile  chdisplay.c  cmdhdr.h  config.h.in  debug.c  ecmdarg.c  ecmdcomp.c  ecmdsub.c  ecompP.c  ecrash.c  ecutcopy.c  edisplay.c  ee1.c  ee2.c  ee3.c  ee4.c  eerror.c  efile.c  eglobals.c  ehdr.h  einit.c  ekey.c  ekeysub.c  eline.c  ematch.c  erdseqs.c  escrnrdl.c  escrnsub.c  estore.c  eversion.c  keyhdr.h  mptable.c  mytypes.h  rdargs.c  scomhdr.h  scommon.c  shdr.h  structs.h  sunix.c  sysunix.c  (+2 more)
test/: MakeRun  RunTests  data  idata  inittest  t00c  t00t  t00v  t01c  t01t  t02c  t02t  t03c  t03t  t03v  t04c  t04t  t04v  t05c  t05cc  t05v  t06c  t06t  t06v  t07c  t07t  t07v  t08c  t08t  t08v  t09c  t09t  t09v  t10c  t10t  t10v  t11c  t11t  t11v  t12c  (+46 more)
